# uni

./: README.md
UWS/: Ethics for the IT Professionals Coursework.docx  IM Apps Security (Responses).xlsx  ISD Coursework.docx  Managing Project _ Inf. Sec Coursework.docx  Mobile Messaging App Security (Responses).xlsx  Service Oriented Development Coursework.docx
UWS/Managing /: Cost Estimation.xlsx  Cost-Benefits Analisis.xlsx  Managing Project _ Inf. Sec Coursework.docx  Schedule.mpp  WBS.docx
UWS/msc_project/: Final Dissertation.doc  Submitting Your Dissertation-1.docx
artifical_intelligence/: README.md  pacman-bil.fasl  pacman.bak  pacman.bil  pacman.cl  pacman.fasl
automaton_and_formal_languages/: Makefile  SonrisasLagrimas.mzt  constantes.h  lexico.l  mozart  mozart.y  sonido.c
computer_structures/ARM/: GRAFICA.ASM  MOUSE.ASM  TEMPO.ASM  compila.bat  const.asm  macros.asm  main.asm  myfun.ASM
computer_structures/MIPS/: p1.s  p2.s  p3.s  p3b.s  p4.s  p4b.s  p5.s  p6.s  trabajo.s
computers_arquitecture/VHD/: Alu16.vhd  Alu_control.vhd  Breg_4p.vhd  dtr.vhd  (+14 more)
concurrent_programmig/: README.md
data_structures/: README.md
networking_1/: AREA.BAK  AREAMAN.BAK  AREAMAN.CPP  AREAMAN.H  COMDOS.H  COMDOSSM.LIB  Copia de AREA.CPP  Copia de AREA.H  IMODEM.BAK  IMODEM.CPP  IMODEM.H  IMODEN.BAK  INTERFAZ.BAK  INTERFAZ.CPP  INTERFAZ.H  LOG.TXT  MAIN.BAK  P1.BAK  P1.CPP  P1.DSK  P1.PRJ
networking_2/: Documentacion.docx
networking_3/: Redes.docx  topologia.tcl
programing_elements/sudoku/ampliacion/sudoku_base/src/: Makefile.am  Makefile.in  casilla.cpp  casilla.h  entorno.cpp  entorno.h  juego.cpp  juego.h  sudoku_base.cpp  tablero.cpp  tablero.h
programming_lab_1/Fase 1/Fase1/src/: Makefile.am  Makefile.in  categoria.cpp  categoria.h  fecha.cpp  gestor.cpp  gestor.h  lpi.cpp  noticias.cpp  noticias.h  ppal.cpp
programming_lab_1/Fase 3/fase3/src/: Makefile.am  Makefile.in  datospersonales.cpp  datospersonales.h  fase3.cpp  fecha.cpp  fecha.h  gestor.cpp  gestor.h  listaenlazada.cpp  listaenlazada.h  meses.cpp  meses.h
programming_lab_2/EC2/ec2/src/: Makefile.am  Makefile.in  arbol.h  cargador.cpp  cargador.h  celda.cpp  celda.h  colagen.h  ec2.cpp  errornumerollaves.cpp  fichero.cpp  fichero.h  grafo.cpp  grafo.h  llave.cpp  planta.cpp  planta.h  prision.cpp  prision.h  puerta.cpp  puerta.h  registro.cpp  testarbol.cpp  testcelda.cpp  testgrafo.cpp  testplanta.cpp  testprision.cpp  testpuerta.cpp
programming_lab_2/EC3/EC3/src/: Makefile.am  Makefile.in  arbol.h  cargador.cpp  cargador.h  errornumerollaves.h  errorpuerta.h  errortamanio.h  fichero.cpp  genaleatorios.h  guardia.h  llave.cpp  persona.cpp  planta.cpp  planta.h  preso.h  prision.h  puerta.h  testarbol.cpp  testcolagen.cpp  testplanta.cpp  testprision.cpp
web_programming/: Esquema.txt  tablas.txt
(+1227 files in other folders)
