bin_PROGRAMS = parte1
parte1_SOURCES = fecha.cpp gestor.cpp lpi.cpp noticias.cpp ppal.cpp \
	categoria.cpp

# set the include path found by configure
INCLUDES= $(all_includes)

# the library search path.
parte1_LDFLAGS = $(all_libraries) 
noinst_HEADERS = fecha.h gestor.h lpi.h noticias.h categoria.h
