bin_PROGRAMS = fase3
fase3_SOURCES = fase3.cpp fecha.cpp datospersonales.cpp meses.cpp \
		listaenlazada.cpp gestor.cpp

# set the include path found by configure
INCLUDES= $(all_includes)

# the library search path.
fase3_LDFLAGS = $(all_libraries) 
noinst_HEADERS = fecha.h datospersonales.h meses.h listaenlazada.h gestor.h
