bin_PROGRAMS = ec3

# set the include path found by configure
INCLUDES= $(all_includes)

# the library search path.
ec3_LDFLAGS = $(all_libraries) 
ec3_LDADD = /home/Mario/Escritorio/EC3/src/gtest.a
ec3_SOURCES = cargador.cpp celda.cpp ec3.cpp errornumerollaves.cpp \
	errorplanta.cpp errorpuerta.cpp errortamanio.cpp fichero.cpp genaleatorios.cpp \
	grafo.cpp guardia.cpp llave.cpp persona.cpp planta.cpp preso.cpp prision.cpp \
	puerta.cpp registro.cpp testarbol.cpp testcelda.cpp testcolagen.cpp testgrafo.cpp \
	testllave.cpp testpersona.cpp testplanta.cpp testprision.cpp testpuerta.cpp
noinst_HEADERS = arbol.h cargador.h celda.h colagen.h errornumerollaves.h \
	errorplanta.h errorpuerta.h errortamanio.h fichero.h genaleatorios.h grafo.h \
	guardia.h llave.h persona.h planta.h preso.h prision.h puerta.h registro.h
