bin_PROGRAMS = sudoku_base

# set the include path found by configure
INCLUDES= $(all_includes)

# the library search path.
sudoku_base_LDFLAGS = $(all_libraries) 
sudoku_base_SOURCES = casilla.cpp entorno.cpp juego.cpp sudoku_base.cpp \
	tablero.cpp
noinst_HEADERS = casilla.h entorno.h juego.h tablero.h
